changed the alerts so their is no longer a white gap, plus deleted some other error stuff in alerts because it was adding it twice, can change it back just delete mine if needed so their isn't 2

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,19 @@ body {
   height: 100%;
 }
 
+body {
+  padding-top: 50px;
+}
+
+.notice, .alert {
+  margin: 0 10px;
+  position: absolute;
+  color: white;
+  z-index: 1;
+  font-size: 20px;
+  top: 100px;
+}
+
 input, textarea {
   display: block;
   width: 50%;
