--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -25,9 +25,6 @@
     z-index: 1;
     text-shadow: 2px 2px 4px #000000;
   }
-  .tempsignup{
-    z-index: 1;
-  }
 }
 
 .landing::before {
@@ -93,12 +90,7 @@ h3.favtweets{
   //background-position: right;
 
 }
-.alert{
-  color: red;
-}
-.notice{
-  color: green;
-}
+
 i {
   border: solid black;
   border-width: 0 6px 6px 0;
